# FunFlow

./: FunFlow.cabal  README.md  stack.yaml
examples/: bad1.fun  bad2.fun  bad3.fun  ex51.fun  ex52.fun  good1.fun  good2.fun  pair1.fun  pair2.fun  pair3.fun  pair4.fun  poison1.fun  slide41.fun  slide42.fun  slide44.fun  slide44b.fun  slide44c.fun  slide54.fun
exec/: Main.hs
src/: Examples.hs  Expr.hs  FunFlow.hs  Infer.hs  Main.hs  Parsing.hs  Type.hs
