name          : FunFlow
version       : 0.0.0.1
synopsis      : Control-flow analysis of a simple functional programming language.
license       : MIT
category      : Language
build-type    : Simple
cabal-version : >= 1.8

library
  other-modules: Infer,
                 Expr,
                 Type,
                 Parsing,
                 Examples

  exposed-modules : FunFlow

  build-depends   : base,
                    uu-parsinglib,
                    monad-supply,
                    mtl,
                    errors,
                    transformers,
                    containers,
                    bound,
                    prelude-extras,
                    ansi-wl-pprint,
                    monad-gen,
                    bifunctors,
                    recursion-schemes,
                    free

  hs-source-dirs  : src

executable funflow
  main-is: Main.hs
  hs-source-dirs: exec
  build-depends: base,
                 FunFlow
